Property Auth Dashboard AWS3 completed
